task-2-kubernetes/kubernetes/podinfo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: shop
spec:
  selector:
    app: podinfo
  ports:
    - port: 80
      targetPort: 9898
